--- a/Pages/linear/linearContent.html
+++ b/Pages/linear/linearContent.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -12,30 +12,31 @@
 		    <h1 class="mui-title">线性尺寸公差</h1>
 		</header>
 		<div class="mui-content">
+			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-mini">按钮</button>
 		    <ul class="mui-table-view">
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right">
-		                   	孔D、轴d及长度L的极限偏差
+		                   	孔D、轴d及长度L
 		                </a>
 		            </li>
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right">
-		                 	钻孔深度L<sub>1</sub>的极限偏差
+		                 	钻孔深度L<sub>1</sub>
 		                </a>
 		            </li>
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right">
-		               		螺纹长度L<sub>2</sub>的极限偏差
+		               		螺纹长度L<sub>2</sub>
 		                </a>
 		            </li>
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right">
-		                	转接半径r和道教L<sub>3</sub>及其角度45°的极限偏差
+		                	转接半径r和倒角L<sub>3</sub>及其角度45°
 		                </a>
 		            </li>
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right">
-		                	非转接半径R的极限偏差
+		                	非转接半径R
 		                </a>
 		            </li>
 		            <li class="mui-table-view-cell">
@@ -46,7 +47,7 @@
 		        </ul>
 		</div>
 		
-		<script src="../js/mui.min.js"></script>
+		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
 		</script>
