--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <script src="js/mui.min.js"></script>
     <link href="css/mui.min.css" rel="stylesheet"/>
     <script type="text/javascript" charset="utf-8">
-      	mui.init();
+      	mui.init({
+      		 subpages:[{
+			      url:'content.html',
+			      id:'content.html',
+			      styles:{
+			        top:'45px',//mui标题栏默认高度为45px；
+			        bottom:'0px'//默认为0px，可不定义；
+			      }
+			    }]
+      	});
     </script>
 </head>
 <body>
@@ -15,10 +24,6 @@
 	    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 	    <h1 class="mui-title">HB5800</h1>
 	</header>
-	<div class="mui-content">
-	    <button type="button" class="mui-btn mui-btn-blue mui-btn-block">概述</button>
-	    <button type="button" class="mui-btn mui-btn-blue mui-btn-block">线性尺寸公差</button>
-	    <button type="button" class="mui-btn mui-btn-blue mui-btn-block">冷冲压件</button>
-	</div>
+	
 </body>
 </html>
