--- a/Pages/linear/linearContent.html
+++ b/Pages/linear/linearContent.html
@@ -12,8 +12,16 @@
 		    <h1 class="mui-title">线性尺寸公差</h1>
 		</header>
 		<div class="mui-content">
-			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-mini">按钮</button>
-		    <ul class="mui-table-view">
+			<div style="width:95%;text-align: center;margin: 15px auto;">
+				
+			
+			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnHoleAxisLength">孔D、轴d及长度L</button>
+			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined">钻孔深度L<sub>1</sub></button>
+			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined">螺纹长度L<sub>2</sub></button>
+			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined">转接半径r和倒角L<sub>3</sub>及其角度45°</button>
+			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined">非转接半径R</button>
+			</div>
+		    <!--<ul class="mui-table-view">
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right">
 		                   	孔D、轴d及长度L
@@ -44,12 +52,20 @@
 		                	零件的内部和外部的棱角
 		                </a>
 		            </li>
-		        </ul>
+		        </ul>-->
 		</div>
 		
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			mui.plusReady(function () {
+				document.getElementById('btnHoleAxisLength').addEventListener('tap',function (e) {
+					mui.openWindow({
+						url:'HoleAxisLength.html',
+						id :'HoleAxisLength.html'
+					})
+				})
+			})
 		</script>
 	</body>
 
