--- a/Pages/linear/linearContent.html
+++ b/Pages/linear/linearContent.html
@@ -17,7 +17,7 @@
 			
 			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnHoleAxisLength">孔D、轴d及长度L</button>
 			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnHoleAndScrewDepth">钻孔深度L<sub>1</sub>及螺纹长度L<sub>2</sub></button>
-			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined">转接半径r和倒角L<sub>3</sub>及其角度45°</button>
+			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnCornorChamAndAngle">转接半径r和倒角L<sub>3</sub>及其角度45°</button>
 			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined">非转接半径R</button>
 			</div>
 		    <!--<ul class="mui-table-view">
@@ -57,6 +57,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init();
+			
 			mui.plusReady(function () {
 				document.getElementById('btnHoleAxisLength').addEventListener('tap',function(e) {
 					mui.openWindow({
@@ -68,6 +69,12 @@
 					mui.openWindow({
 						url:'HoleAndScrewDepth.html',
 						id :'HoleAndScrewDepth.html'
+					})
+				});
+				document.getElementById('btnCornorChamAndAngle').addEventListener('tap',function(e) {
+					mui.openWindow({
+						url:'CornorChamAndAngle.html',
+						id :'CornorChamAndAngle.html'
 					})
 				})
 			})
