--- a/content.html
+++ b/content.html
@@ -5,7 +5,8 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="css/mui.min.css" rel="stylesheet" />
+		<link href="css/mui.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="css/iconfont.css"/>
 		<style type="text/css">
 			/*h4{
 				font-family:"黑体";
@@ -21,24 +22,29 @@
 						<h4>概述</h4>
 					</a>
 				</li>
-		        <li class="mui-table-view-cell mui-collapse"><a class="mui-navigate-right"><h4>切削尺寸公差</h4></a>
-	                <ul class="mui-table-view mui-table-view-chevron">
-			            <li class="mui-table-view-cell" id="LinerTol">
-			                <a class="mui-navigate-right">
-			                   	线性尺寸公差
-			                </a>
-			            </li>
-			            <li class="mui-table-view-cell">
-			                <a class="mui-navigate-right">
-			                 	角度尺寸公差
-			                </a>
-			            </li>
-			            <li class="mui-table-view-cell">
-			                <a class="mui-navigate-right">
-			               		形状和位置公差
-			                </a>
-			            </li>
-			        </ul>
+		        <li class="mui-table-view-cell mui-collapse" style="padding-left: 0px; padding-right: 0px;"><a style="margin-left: 15px;margin-right: 15px;"><h4>切削尺寸公差</h4></a>
+		        	<div style="margin:0px">
+		                <ul class="mui-table-view mui-grid-view mui-grid-9" style="margin-left: 0px;margin-right: 0px;">
+							<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4" >
+								<a id="LinerTol">
+									<span class="mui-icon iconfont icon-zhixian"></span>
+									<div class="mui-media-body">线性尺寸</div>
+								</a>
+							</li>
+							<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4">
+								<a id="AngleTol">
+									<span class="mui-icon iconfont icon-icon-protractor"></span> 
+									<div class="mui-media-body">角度尺寸</div>
+								</a>
+							</li>
+							<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4">
+								<a id="ShapePosition"> 
+									<span class="mui-icon iconfont icon-xingzhuang"></span>
+									<div class="mui-media-body">形状位置</div>
+								</a>
+							</li>
+						</ul>
+					</div>
 		        </li>
 		        <li class="mui-table-view-cell">
 		            <a class="mui-navigate-right">
