--- a/Pages/linear/linearContent.html
+++ b/Pages/linear/linearContent.html
@@ -18,7 +18,8 @@
 			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnHoleAxisLength">孔D、轴d及长度L</button>
 			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnHoleAndScrewDepth">钻孔深度L<sub>1</sub>及螺纹长度L<sub>2</sub></button>
 			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnCornorChamAndAngle">转接半径r和倒角L<sub>3</sub>及其角度45°</button>
-			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined">非转接半径R</button>
+			<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnRadiusR">非转接半径R</button>
+				<button type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined" id="btnEdges">零件内部和外部的棱角</button>
 			</div>
 		    <!--<ul class="mui-table-view">
 		            <li class="mui-table-view-cell">
@@ -76,6 +77,18 @@
 						url:'CornorChamAndAngle.html',
 						id :'CornorChamAndAngle.html'
 					})
+				})
+				document.getElementById('btnRadiusR').addEventListener('tap',function(e){
+				    mui.openWindow({
+				    	url:'RadiusR.html',
+				    	id:'RadiusR.html'
+				    })
+				})
+				document.getElementById('btnEdges').addEventListener('tap',function(e){
+				    mui.openWindow({
+				    	url:'Edges.html',
+				    	id:'Edges.html'
+				    })
 				})
 			})
 		</script>
