完成概述内容

--- a/content.html
+++ b/content.html
@@ -12,7 +12,7 @@
 				font-family:"黑体";
 			}*/
 			/* 修饰九宫格底部线条 */
-			.mui-table-view-cell.mui-collapse .mui-table-view .mui-table-view-cell:after{
+			#cuttingWorkpiece.mui-table-view-cell.mui-collapse .mui-table-view .mui-table-view-cell:after{
 				background-color:transparent;
 			}
 		</style>
@@ -23,10 +23,37 @@
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-collapse">
 					<a class="mui-navigate-right">
-						<h4>概述</h4>
+						<h4>前言</h4>
 					</a>
+					<ul class="mui-table-view mui-table-view-chevron">
+					        <li class="mui-table-view-cell">
+					            <a class="mui-navigate-right" id="btnPreface">
+									前言
+					            </a>
+					        </li>
+					        <li class="mui-table-view-cell">
+					            <a class="mui-navigate-right" id="btnRange">
+					                1、范围
+					            </a>
+					        </li>
+					        <li class="mui-table-view-cell">
+					            <a class="mui-navigate-right" id="btnRefStandard">
+					            	2、引用标准
+					            </a>
+					        </li>
+					        <li class="mui-table-view-cell">
+					            <a class="mui-navigate-right" id="btnDefinition">
+					            	3、定义
+					            </a>
+					        </li>
+					        <li class="mui-table-view-cell">
+					            <a class="mui-navigate-right" id="btnGeneralPrinciples">
+					            	4、总则
+					            </a>
+					        </li>
+					    </ul>
 				</li>
-		        <li class="mui-table-view-cell mui-active mui-collapse">
+		        <li class="mui-table-view-cell mui-active mui-collapse" id="cuttingWorkpiece">
 		        	<a class="mui-navigate-right">
 		        		<h4>切削加工件</h4>
 		        	</a>
@@ -87,10 +114,37 @@
 						id : 'liner.html',
 						
 					})
+				});
+				h('#btnPreface').tap(function(e){
+					mui.openWindow({
+						url: 'Pages/Preface/Preface.html',
+						id : 'Preface.html',
+					})
 				})
-//				document.getElementById('LinerTol').addEventListener('tap',function(e){
-//					
-//				})
+				h('#btnRange').tap(function(e){
+					mui.openWindow({
+						url: 'Pages/Preface/Range.html',
+						id : 'Range.html',
+					})
+				})
+				h('#btnRefStandard').tap(function(e){
+					mui.openWindow({
+						url: 'Pages/Preface/RefStandard.html',
+						id : 'RefStandard.html',
+					})
+				})
+				h('#btnDefinition').tap(function(e){
+					mui.openWindow({
+						url: 'Pages/Preface/Definition.html',
+						id : 'Definition.html',
+					})
+				})
+				h('#btnGeneralPrinciples').tap(function(e){
+					mui.openWindow({
+						url: 'Pages/Preface/GeneralPrinciples.html',
+						id : 'GeneralPrinciples.html',
+					})
+				})
 			})
 		</script>
 	</body>
