fix:角度公差预览图

--- a/Pages/Angle/Angle.html
+++ b/Pages/Angle/Angle.html
@@ -6,6 +6,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="../../css/imageViewer.css"/>
 		<style type="text/css">			
 			p{
 				color:black;
@@ -73,8 +74,11 @@
 		    </ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/mui.zoom.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/mui.previewimage.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			mui.previewImage();
 		</script>
 	</body>
 
